# templates-cpp-algorithms-and-structures

./: .gitignore  CMakeLists.txt
Algorithms/Sorting/Array_Implementation/: bubble_sort.hpp  bucket_sort.hpp  count_sort.hpp  insertion_sort.hpp  merge_sort.hpp  quick_sort.hpp  radix_sort.hpp  selection_sort.hpp
Algorithms/Sorting/Lists_Implementation/SinglyLinkedList/: bubble_sort.hpp  insertion_sort.hpp  merge_sort.hpp  quick_sort.hpp  selection_sort.hpp
CodeForces/01 - Problem_4A_Watermelon/: solution.cpp
CodeForces/02 - Problem_71A_Way_Too_Long_Words/: solution.cpp
CodeForces/03 - Problem_231A_Team/: solution.cpp
CodeForces/04 - Problem_282A_Bi++/: solution.cpp
CodeForces/05 - Problem_158A_NextRound/: solution.cpp
CodeForces/06 - Problem_50A_DominoPiling/: solution.cpp
CodeForces/07 - Problem_263A_BeautifulMatrix/: solution.cpp
CodeForces/08 - Problem_112A_PetyaAndStrings/: solution.cpp
CodeForces/09 - Problem_339A_HelpfulMaths/: solution.cpp
CodeForces/10 - Problem_236A_BoyOrGirl/: solution.cpp
CodeForces/11 - Problem_231A_WordCapitilization/: solution.cpp
CodeForces/12 - Problem_791A_BearAndBigBrother/: solution.cpp
DataStructures/Arrays/: primitive_one_dimensional.cpp  primitive_two_dimensional.cpp
Practice/01 - MaxSubArraySum/: solution.cpp
Practice/02 - BinarySearch/: solution.cpp
Practice/03 - GetCommonValues/: solution.cpp
Practice/04 - GeneratingSubsets/: solution.cpp
Practice/05 - GeneratingPermutations/: solution.cpp
Utilities/: colors.hpp  input_validation.h  menus.cpp  time_manipulation_functions.hpp
